tests/dfrouter/errors/detector_flow_files/false_detectors_flows_file2_deprecated/errors.dfrouter
Warning: Please note that using ';' as list separator is deprecated and not accepted anymore.
Error: The measure-file 'xxx.txt;input_flows.txt' can not be opened.
Quitting (on error).
